<resources>
	<string name="app_name">Kings in the Corner</string>
	<string name="copyright">© 2010 Asparagus Programs</string>
	<string name="app_version">1.4.4</string>
	<string name="button_playGame">Play game</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_continue">Continue</string>
	<string name="button_selectUser">Select User</string>
	<string name="button_createUser">Create User</string>
	<string name="button_singlePlayer">Single Player</string>
	<string name="button_multiplayer">Multi-player</string>
	<string name="button_stats">Statistics</string>
	<string name="button_prefs">Settings</string>
	<string name="button_2players">2 Players</string>
	<string name="button_3players">3 Players</string>
	<string name="button_4players">4 Players</string>
	<string name="button_saveYes">Save game</string>
	<string name="button_saveNo">Don\'t save</string>
	<string name="button_quitYes">Quit game</string>
	<string name="button_quitNo">Don\'t quit</string>
	<string name="button_OK">OK</string>
	<string name="button_clearSaves">Clear saves</string>
	<string name="button_showOfflineHelp">Offline help</string>
	<string name="menu_playAgain">Play Again</string>
	<string name="menu_undo">Undo</string>
	<string name="menu_undoDisabled">Can\'t Undo</string>
	<string name="menu_sortHand">Sort Hand</string>
	<string name="menu_sortHandStop">Stop Sort</string>
	<string name="menu_prefs">Settings</string>
	<string name="menu_help">Help</string>
	<string name="menu_about">About</string>
	<string name="menu_cheats">Cheats</string>
	<string name="menu_win">I Win</string>
	<string name="menu_trash">Trash Opponent</string>
	<string name="diag_playerTurn">Player %1$d\'s turn.</string>
	<string name="diag_playerWin">Player %1$d wins.</string>
	<string name="diag_deckEmpty">Deck is empty!</string>
	<string name="diag_quitSingle">Save the game before quitting? Not saving will delete any previously saved game.</string>
	<string name="diag_quitMulti">Are you sure you want to quit?</string>
	<string name="diag_noUserGame">No user name selected. Game statistics will not be recorded.</string>
	<string name="diag_noUserStats">You must provide a user name to keep track of stats.</string>
	<string name="diag_firstTime">To end your turn, tap the deck in the center of the table. For more help, press menu and select Help.</string>
	<string name="diag_youWin">You Win!!</string>
	<string name="diag_youLose">You Lose.</string>
	<string name="diag_clearSaves">This will erase all saved games for all users. Are you sure you want to do this?</string>
	<string name="diag_noInternet">No internet access available. Would you like to view the slightly outdated offline help?</string>
	<string name="diag_oldSaves">Old saves are incompatible with this version of the game and have been removed.</string>
	<string name="diag_aboutCards">Don\'t like the new cards?\n\nChange them in the settings!</string>
	<string name="dialog_title_selectUser">Select User</string>
	<string name="dialog_title_cardImages">Choose Style</string>
	<string name="dialog_title_difficulty">Choose Difficulty</string>
	<string name="pref_heading_user">User settings</string>
		<string name="pref_key_username">Username</string>
		<string name="pref_title_username">User Name</string>
		<string name="pref_summary_username">No user name selected. Wins/losses will not be tracked</string>
		<string name="pref_key_newUser">NewUser</string>
		<string name="pref_title_createUser">Create New User</string>
		<string name="pref_summary_createUser">Create a new user name to track wins/losses</string>
		<string name="pref_key_userAdvanced">AdvancedUserSettings</string>
		<string name="pref_title_userAdvanced">Advanced User Settings</string>
		<string name="pref_summary_userAdvanced">Remove user, clear saves, etc.</string>
			<string name="pref_key_clearSaves">ClearSaves</string>
			<string name="pref_title_clearSaves">Clear Saved Games</string>
			<string name="pref_summary_clearSaves">Clear all saved games for all users</string>
			<string name="pref_summary_removeUser">Remove a user name from the list and delete their stats</string>
			<string name="pref_title_removeUser">Remove User</string>
			<string name="removeUser_title">*Click name to delete*</string>
			<string name="pref_key_noUserWarning">NoUserWarning</string>
			<string name="pref_title_noUserWarning">No User Warning</string>
			<string name="pref_summary_noUserWarning">Shows a warning before starting a game when no user is selected</string>
	<string name="pref_key_gameplay">GameplayCategory</string>
	<string name="pref_heading_gameplay">Gameplay settings</string>
		<string name="pref_key_computerDelay">ComputerDelay</string>
		<string name="pref_title_computerDelay">Computer Delay</string>
		<string name="pref_summary_computerDelay">Set the delay in the computer\'s playing. Higher numbers make the computer play slower</string>
		<string name="pref_key_difficulty">Difficulty</string>
		<string name="pref_title_difficulty">Difficulty</string>
		<string name="pref_summary_difficulty">Set the difficulty of the computer controlled opponents</string>
		<string name="pref_key_autosave">Autosave</string>
		<string name="pref_title_autosave">Autosave</string>
		<string name="pref_summary_autosave">Automatically saves single player games periodically and before quitting</string>
		<string name="pref_key_emptyDeckWarning">EmptyDeckWarning</string>
		<string name="pref_title_emptyDeckWarning">Empty Deck Warning</string>
		<string name="pref_summary_emptyDeckWarning">Shows a warning when the deck runs out of cards</string>
		<string name="pref_key_cheatString">cheats.enabled</string>
		<string name="pref_key_cheatScreen">CheatScreen</string>
		<string name="pref_title_cheatScreen">Cheats</string>
		<string name="pref_summary_cheatScreen">Enable/diasble various cheats</string>
			<string name="pref_key_showComputerHand">ShowComputerHand</string>
			<string name="pref_title_showComputerHand">Show Computer Hand</string>
			<string name="pref_summary_showComputerHand">Shows the face of cards in the computer\'s hand</string>
			<string name="pref_key_autoWin">AutoWin</string>
			<string name="pref_title_autoWin">Enable \"I Win\" button</string>
			<string name="pref_summary_autoWin">Add a button in the menu to automatically win in single player</string>
			<string name="pref_key_cheatsEnabled">CheatsEnabled</string>
			<string name="pref_title_cheatsEnabled">Enable Cheats</string>
			<string name="pref_summary_cheatsEnabled">Uncheck to remove this cheat menu and disable all cheats</string>
	<string name="pref_heading_display">Display settings</string>
		<string name="pref_key_cardImage">CardImage</string>
		<string name="pref_title_cardImage">Card Style</string>
		<string name="pref_summary_cardImage">If you are currently in a game, you will need to return to the main menu for changes to take effect</string>
		<string name="cardImage_default">classic</string>
		<string name="pref_key_aboutCards">AboutCards</string>
		<string name="pref_key_drawPileCount">DrawPileCount</string>
		<string name="pref_title_drawPileCount">Draw Pile Count</string>
		<string name="pref_summary_drawPileCount">Shows the number of cards remaining in the draw pile</string>
		<string name="pref_key_highlightCards">HighlightCards</string>
		<string name="pref_title_hightlightCards">Highlight Cards</string>
		<string name="pref_summary_highlightCards">Highlights a card when a playable card is dragged over it</string>
	<string name="pref_heading_app">Application information</string>
		<string name="pref_key_update">CheckForUpdates</string>
		<string name="pref_title_update">Check for Updates</string>
		<string name="link_market">market://details?id=com.asparagusprograms.kingsinthecorner</string>
		<string name="pref_title_website">View Change Log</string>
		<string name="pref_summary_website">Full change log for updates</string>
		<string name="link_website">http://code.google.com/p/ap-kings-in-the-corner/wiki/Changelog</string>
			<string name="pref_key_email">EmailDeveloper</string>
			<string name="pref_title_email">Report a Bug</string>
			<string name="pref_summary_email">Just add a description of your problem with as much detail as possible</string>
			<string name="subject_email">BUG: Kings in the Corner</string>
			<string name="body_email">\n\n\nLeave this------------------------\nApp Version: %1$s\nPhone: %2$s\nAndroid Version: %3$s\n--------------------------------------\n</string>
			<string name="link_email">mailto:asparagus.programs@gmail.com</string>
	<string name="pref_key_lastRunVersion">LastRunVersion</string>
	<string name="pref_key_firstGame">FirstGame</string>
	<string name="pref_key_inGame">InGame</string>
	<string name="toast_usernameShort">User name must be greater than 3 characters</string>
	<string name="toast_usernameLong">User name must be less than 25 characters</string>
	<string name="toast_usernameStart">User name must begin with a letter</string>
	<string name="toast_yourTurn">Your Turn</string>
	<string name="username_none">None</string>
	<string name="toast_usernameCreated">User name created</string>
	<string name="toast_usernameExists">User name already exists</string>
	<string name="toast_usernameInvalid">Invalid user name</string>
	<string name="toast_gameRestored">Game Restored</string>
	<string name="toast_usernamePeriod">User name cannot contain a period</string>
	<string name="toast_cheatsEnabled">You little cheater...</string>
	<string name="toast_fileNotFoundException">Error: File not found</string>
	<string name="help_title_gamePlay">Game Play</string>
	<string name="help_summary_gamePlay">The aim of the game is to be the first player to get rid of all your cards.</string>
	<string name="help_body_gamePlay"><b>Starting the Game:</b> All players start out with 7 cards in their hand. The rest of the deck is placed in the center as a draw pile. The top four cards are placed face up around the draw pile, one card on each side.\n\n<b>On Your Turn:</b> You begin your turn by drawing a card. Cards are played from your hand in descending order of value and alternating colored suits on top of the four stacks around the draw pile. Kings are the exception and can be played on the corners of the draw pile. Cards can also be moved from one pile to another following the same rules. If a pile is empty as a result, any card can be played there.\n\n<b>Ending Your Turn:</b> Your turn is over when you can not play any cards or move any piles. To end your turn, press Menu and select End Turn.</string>
	<string name="help_body_modes"><b>Single Player:</b> This starts a 2 player game with one player controlled by the computer. Your hand is shown at the bottom of the screen and the back of the computer\'s hand is shown at the top of the screen.\n\n<b>Multi-player:</b> This allows you to pick the number of players (from 2-4), all controlled by human players. </string>
	<string name="help_summary_modes">There are two different game modes to choose from: Single Player and Multi-player.</string>
	<string name="help_title_hints">Hints &amp; Tips</string>
	<string name="help_summary_hints">Things that are helpful but may not be completely obvious.</string>
	<string name="help_title_modes">Game Modes</string>
	<string name="help_body_hints">Instead of playing a card in an empty space then moving a pile on top of it, you can play the card directly under a pile. This move will not be highlighted and only works when there is at least one empty space.\n\nAutosave will save the game automatically when you quit. It also saves the game when you switch to another application, press the home button, and after each player\'s turn. This way there is little chance of losing your progress.\n\nAny dialog, besides \"Player x\'s turn\", can be canceled by pressing the back button. This will remove the dialog box without performing any actions.\n"</string>
	<string name="help_end">***</string>
</resources>