<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:id="@+id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="#FFFFFF"><TableLayout android:id="@+id/TableLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:textColor="#FFFFFF" android:background="#2B60DE" android:textSize="23dip" android:height="30dip" android:gravity="center_vertical" android:text="@string/help_title_gamePlay" android:id="@+id/title_gameplay"></TextView><ImageView android:background="#000000" android:layout_width="fill_parent" android:layout_height="1px" android:id="@+id/Shadow"></ImageView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="15dip" android:text="@string/help_summary_gamePlay" android:id="@+id/summary_gameplay"></TextView><ImageView android:background="#000000" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:layout_height="2px" android:id="@+id/Divider"></ImageView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingLeft="13dip" android:paddingTop="5dip" android:text="@string/help_body_gamePlay" android:textSize="17dip" android:id="@+id/body_gameplay"></TextView><TextView android:layout_width="wrap_content" android:background="#2B60DE" android:textColor="#FFFFFF" android:layout_height="11pt" android:textSize="23dip" android:gravity="center_vertical" android:height="30dip" android:text="@string/help_title_modes" android:id="@+id/title_modes"></TextView><ImageView android:background="#000000" android:layout_width="fill_parent" android:layout_height="1px" android:id="@+id/Shadow"></ImageView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="15dip" android:text="@string/help_summary_modes" android:id="@+id/summary_modes"></TextView><ImageView android:background="#000000" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:layout_height="2px" android:id="@+id/Divider"></ImageView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingLeft="13dip" android:paddingTop="5dip" android:text="@string/help_body_modes" android:textSize="17dip" android:id="@+id/body_modes"></TextView>





<TextView android:layout_width="wrap_content" android:background="#2B60DE" android:textColor="#FFFFFF" android:layout_height="11pt" android:textSize="23dip" android:gravity="center_vertical" android:height="30dip" android:text="@string/help_title_hints" android:id="@+id/title_hints"></TextView><ImageView android:background="#000000" android:layout_width="fill_parent" android:layout_height="1px" android:id="@+id/Shadow"></ImageView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="15dip" android:text="@string/help_summary_hints" android:id="@+id/summary_hints"></TextView><ImageView android:background="#000000" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:layout_height="2px" android:id="@+id/Divider"></ImageView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingLeft="13dip" android:paddingTop="5dip" android:text="@string/help_body_hints" android:textSize="17dip" android:id="@+id/body_hints"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/End" android:text="@string/help_end" android:gravity="center_horizontal"></TextView>
</TableLayout>






</ScrollView>
